@@ -42,10 +42,8 @@ args = prog + ' ' + subdir_prog + ' ' + variant_prog
 test = TestSCons.TestSCons()
 
 if not test.where_is('g77'):
-    print "g77 is not installed on this system."
-    print "Cannot test F77PATH."
-    test.no_result(1)
-
+    test.pass_test()
+    
 test.subdir('include', 'subdir', ['subdir', 'include'], 'inc2')
 
 test.write('SConstruct', """
